# macclean

./: .gitignore  LICENSE  M1_OPTIMIZATION_GUIDE.md  NOUVELLES_FONCTIONNALITES.md  QUICKSTART.md  README.md  benchmark_m1.py  demo_cli.py  demo_nouvelles_fonctionnalites.py  main.py  pyproject.toml  requirements.txt  start.bat  start.sh  test_gui_display.py  test_gui_minimal.py  test_gui_simple.py
src/macclean/: __init__.py  __main__.py
src/macclean/core/: __init__.py  cleaner.py
src/macclean/gui/: __init__.py  main_window.py
src/macclean/utils/: __init__.py  helpers.py
tests/: conftest.py  test_core.py  test_gui.py  test_init.py
