[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "macclean"
version = "1.0.0"
description = "Application GUI multiplateforme pour nettoyer le stockage"
authors = [
    {name = "MacClean Team", email = "team@macclean.app"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["cleaning", "storage", "gui", "macos", "windows", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5.0",
    "psutil>=5.9.0",
    "colorama>=0.4.6",
    "tqdm>=4.66.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0"
]

[project.scripts]
macclean = "macclean.__main__:main"

[project.urls]
Homepage = "https://github.com/rtivolle/macclean"
Repository = "https://github.com/rtivolle/macclean.git"
Issues = "https://github.com/rtivolle/macclean/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers"
]
markers = [
    "slow: marks tests as slow",
    "gui: marks tests as GUI tests"
]

[tool.coverage.run]
source = ["src/macclean"]
omit = [
    "*/tests/*",
    "*/conftest.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]
